--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <nav class="flex items-center gap-3 md:gap-8 overflow-x-auto no-scrollbar ml-4">
             <a class="text-sm font-medium hover:text-black/70 transition-colors whitespace-nowrap" href="#docs">Developer Guide</a>
-            <a class="text-sm font-medium hover:text-black/70 transition-colors whitespace-nowrap" href="#support">Support</a>
+            <a class="text-sm font-medium text-blue-600 hover:text-blue-800 transition-colors whitespace-nowrap" href="icons.html">Icon Library</a>
             <a class="text-sm font-medium hover:text-black/70 transition-colors whitespace-nowrap" href="#donate">Donate</a>
         </nav>
     </div>
