--- a/index.html
+++ b/index.html
@@ -474,11 +474,20 @@
             'github': '<svg width="1em" height="1em" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.52 2.34 1.08 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02a9.56 9.56 0 0 1 5 0c1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2z"/></svg>',
             'facebook': '<svg width="1em" height="1em" viewBox="0 0 24 24" fill="currentColor"><path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.17 6 13.54 6c1.14 0 2.32.2 2.32.2v2.55h-1.3c-1.25 0-1.63.77-1.63 1.56V12h2.87l-.46 3h-2.41v6.8c4.56-.93 8-4.96 8-9.8z"/></svg>',
             'apple': '<svg width="1em" height="1em" viewBox="0 0 24 24" fill="currentColor"><path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.5 1.3 0 2.52.88 3.33.88.82 0 2.37-1.09 3.98-0.93 1.12.09 2.15.65 2.72 1.48-2.61 1.35-2.18 5.25.46 6.43-.54 1.57-1.35 3.12-2.6 4.75zM15 5.58c.67-1.15.54-2.73 0-3.58-.8 0-2.07.49-2.75 1.66-.58.98-.44 2.56.03 3.52.74.05 1.99-.5 2.72-1.6z"/></svg>',
+            'tiktok': '<svg width="1em" height="1em" viewBox="0 0 24 24" fill="currentColor"><path d="M12.53.02C13.84 0 15.14.01 16.44 0c.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 2.78-1.15 5.54-3.33 7.37-1.94 1.62-4.62 2.26-7.14 2.03-2.53-.23-4.85-1.46-6.42-3.36-1.52-1.84-2.14-4.27-1.78-6.62.33-2.22 1.56-4.22 3.37-5.5 1.83-1.31 4.2-1.8 6.46-1.46v4.14c-2.48-.37-5.04.88-6.04 3.14-.94 2.05-.28 4.67 1.57 5.92 1.72 1.19 4.18 1.12 5.85-.14 1.68-1.25 2.53-3.37 2.4-5.46.03-5.63-.03-11.26.04-16.89z"/></svg>',
             'developer': 'code', 'dev': 'code', 'code': 'code',
             'terminal': 'terminal', 'menu': 'menu', 'settings': 'settings'
         };
 
-        const state = { query: 'google', color: '#000000', size: 64 };
+        // --- FIXED: READ URL PARAMETERS ---
+        const urlParams = new URLSearchParams(window.location.search);
+        const urlIcon = urlParams.get('icon');
+
+        const state = { query: urlIcon || 'google', color: '#000000', size: 64 };
+        
+        // Update input visually if coming from library page
+        if(urlIcon) { els.search.value = urlIcon; }
+
         let debounceTimer; // TIMER FOR DEBOUNCING
 
         const updateUI = async () => {
